<resources>
    <string name="app_name">HelloBook</string>
    <string name="book_shelf">书架</string>
    <string name="book_library">书库</string>
    <string name="me">我</string>
    <string name="loading">加载中...</string>
    <string name="book_type">分类</string>
    <string name="search">搜索</string>
    <string name="book_sort">排行</string>
    <string name="keywords_hint">请输入搜索关键字</string>
    <string name="pull_to_refreshing">下拉刷新</string>
    <string name="last_update">最后更新</string>
    <string name="release_refresh">松开立即刷新</string>
    <string name="cancel_refresh">下拉可以刷新</string>
    <string name="last_updata">上次更新： </string>
    <string name="no_data_show">没有数据显示</string>
    <string name="book_author">作者：</string>
    <string name="update_status">更新状态：</string>
    <string name="last_chapter">最新章节：</string>
    <string name="chapter_list">章节目录</string>
    <string name="add_book">添加</string>
    <string name="read_book">阅读</string>
    <string name="description">简介</string>
</resources>
