<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <View style="@style/line_dividing_gray_horizontal_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/bookShelfText"
            style="@style/main_bottom_textview_style"
            android:drawableTop="@drawable/main_shelf_selector"
            android:text="@string/book_shelf" />
        <TextView
            android:id="@+id/bookLibraryText"
            style="@style/main_bottom_textview_style"
            android:drawableTop="@drawable/main_library_selector"
            android:text="@string/book_library" />

        <TextView
            android:id="@+id/meText"
            style="@style/main_bottom_textview_style"
            android:drawableTop="@drawable/main_me_selector"
            android:text="@string/me" />
    </LinearLayout>
</LinearLayout>
