<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_ffffff"
            android:orientation="vertical"
            >
        <LinearLayout
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/headImg"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/bookNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/dialog_title_black"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray_888888"
                        android:text="@string/book_author"
                        />
                    <TextView
                        android:id="@+id/authorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray_888888"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray_888888"
                        android:text="@string/update_status"
                        />
                    <TextView
                        android:id="@+id/statusText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray_888888"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray_888888"
                        android:text="@string/last_chapter"
                        />
                    <TextView
                        android:id="@+id/lastChapterText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray_888888"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="80dp">
          <RelativeLayout
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="match_parent">
              <TextView
                  android:id="@+id/addText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:background="@drawable/car_operation_bg"
                  android:textColor="@color/dialog_title_black"
                  android:padding="12dp"
                  android:text="@string/add_book"
                  android:layout_centerInParent="true"
                  />
          </RelativeLayout>
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/readText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:background="@drawable/car_operation_bg"
                     android:textColor="@color/dialog_title_black"
                     android:padding="12dp"
                     android:text="@string/read_book"
                     android:layout_centerInParent="true"
                     />
             </RelativeLayout>
         </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/gray_dddddd"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/dialog_title_black"
            android:text="@string/description"
            />
        <TextView
            android:id="@+id/descriptionText"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dialog_title_black"
            />
    </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/chapterListText"
        style="@style/login_submit_textview_style"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/chapter_list" />

</LinearLayout>
